fix lists while scrolling & add own scrollbar

--- a/src/app/(app)/lists/[id]/lists/lists.module.css
+++ b/src/app/(app)/lists/[id]/lists/lists.module.css
@@ -20,7 +20,8 @@
   padding-right: min(30px, 10%);
   margin-bottom: 10px;
   border-right: 1px solid #5f6368;
-  height: 100%;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 @media (max-width: 500px) {
